Menu desplegable para moviles

--- a/tpl/footer.tpl.html
+++ b/tpl/footer.tpl.html
@@ -1,7 +1,7 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4 text-center">
 						<img src="assets/images/logo-blanco.png" alt="" class="img-responsive logo-footer">
 					</div>
 					<div class="col-sm-4 footer-bords">
